css/dark.css
/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */

:root {
    --dark: #000;
    --medium: #121212;
    --light: #2e2e2e;
}

body p.dark-mode,
body h2.dark-mode,
body h3.dark-mode
 {
    color: #fff;
}

/*-- -------------------------- -->
<---           NAVBAR           -->
<--- -------------------------- -*/

body.dark-mode {
    background: var(--light);
}

.navbar-menu.dark-mode {
    background: var(--medium);
}

.side-nav a.dark-mode {
    color: #f5f3f3;
}

a.active-menu.dark-mode {
    color: var(--primary);
}

.hamburger.is-active .hamburger-inner.dark-mode::after,
.hamburger.is-active .hamburger-inner.dark-mode::before {
    background: #fff;
}

#mobile-logo {
    visibility: visible;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
}

#mobile-logo.dark-mode {
    visibility: hidden;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
}

.dark-mode-logo {
    opacity: 0;
    position: absolute;
    visibility: hidden;
    -webkit-transition: .2s ease;
    -o-transition: .2s ease;
    transition: .2s ease;
}

.dark-mode-logo.dark-mode {
    opacity: 1;
    visibility: visible;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
}

.mobile-wrapper.dark-mode {
    background: var(--medium);
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
    border-bottom: 4px solid var(--primary);
}

#dark-mode {
    background: transparent;
    position: absolute;
    border: none;
    width: 45px;
    height: 25px;
    top: 42px;
    left: 20px;
    padding: 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
}

.dark-toggle {
    position: absolute;
    width: 40px;
    height: 20px;
    z-index: 20;
    border-radius: 10px;
    background: transparent;
    border: 3px solid #000;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    z-index: 1000;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    align-items: center;
}

.dark-toggle:after {
    content: url('/moon.svg');
    color: #2e2e2e;
    position: absolute;
    height: auto;
    top: -26px;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
    opacity: 1;
}

.dark-toggle.dark-mode:after {
    top: -70px;
    visibility: hidden;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
    opacity: 0;
}

.dark-toggle:before {
    content: url('/sun.svg');
    position: absolute;
    top: 10px;
    visibility: hidden;
    -webkit-transition: all .3s ease;
    -o-transition: all .3s ease;
    transition: all .3s ease;
    opacity: 0;
}

.dark-toggle.dark-mode:before {
    top: -27px;
    height: 20px;
    width: 20px;
    visibility: visible;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
    z-index: 2000;
    opacity: 1;
}

.dark-toggle:hover {
    cursor: pointer;
}

.dark-toggle span {
    height: 10px;
    width: 10px;
    left: 3px;
    border-radius: 50%;
    background: var(--dark);
    position: absolute;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
}

.dark-toggle.dark-mode {
    border-color: transparent;
    background: var(--primary);
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
}

.dark-toggle span.dark-mode {
    background: var(--light);
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
    position: absolute;
    left: 21px;
}

.hamburger-inner.dark-mode, .hamburger-inner.dark-mode::before, .hamburger-inner.dark-mode::after {
    background: #fff;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
}

/*-- -------------------------- -->
<---           LANDING          -->
<--- -------------------------- -*/

#hero {
    position: relative;
}

#dark.dark-mode {
    background: var(--medium);
    opacity: .84;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
}

.floating-box.dark-mode {
    background: var(--medium);
}

/*-- -------------------------- -->
<---          TRUST US          -->
<--- -------------------------- -*/

.estimate.dark-mode {
    background: var(--medium);
}

.estimate h2.dark-mode {
    color: var(--primary);
}

.content-back.dark-mode {
    height: 100.76%;
    width: s;
    position: absolute;
    top: -3px;
    background: rgb(46,46,46);
    background: -o-radial-gradient(circle, rgba(46,46,46,1) 0%, rgba(0,0,0,1) 100%);
    background: radial-gradient(circle, rgba(46,46,46,1) 0%, rgba(0,0,0,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2e2e2e",endColorstr="#000000",GradientType=1);
}

/*-- -------------------------- -->
<---           OFFER            -->
<--- -------------------------- -*/

.dark-svg {
    position: absolute;
    display: none !important;
}

.dark-svg.dark-mode {
    display: block !important;
}

.light-svg.dark-mode {
    opacity: 0;
}

/*-- -------------------------- -->
<---           WHY US           -->
<--- -------------------------- -*/

#why-us.dark-mode {
    background: var(--dark);
}

/*-- -------------------------- -->
<---            FAQ             -->
<--- -------------------------- -*/

#frequently-asked-questions.dark-mode {
    background: var(--medium);
}

.faq-group h4.dark-mode {
    color: var(--primary);
}

.faq-group a {
    color: var(--primary);
}

ul li.dark-mode {
    content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
    color: #fff;
}

/*-- -------------------------- -->
<---          SPOTLIGHT         -->
<--- -------------------------- -*/

#spotlight.dark-mode {
    background: var(--medium);
}

/*-- -------------------------- -->
<---        MEET THE TEM        -->
<--- -------------------------- -*/

#meet-the-team.dark-mode {
    background: var(--medium) !important;
}

.team-content.dark-mode {
    background: var(--light);
}

.team-content p.dark-mode {
    color: #fff !important;
}

/*-- -------------------------- -->
<---          CONTACT           -->
<--- -------------------------- -*/

.top h2.dark-mode {
    color: var(--medium);
}

.top p.dark-mode {
    color: var(--medium);
}

/*-- -------------------------- -->
<---           FOOTER           -->
<--- -------------------------- -*/

footer.dark-mode {
    background: var(--dark);
}

/* Tablets */
@media screen and (min-width: 500px) and (max-width: 1024px) {

    

}

/* Desktop */
@media screen and (min-width: 1025px) {

    .dark-toggle {
        border-color: #fff;
    }

    .dark-toggle:after {
        content: url('/moon-white.svg');
        color: #2e2e2e;
        position: absolute;
        height: auto;
        top: -26px;
        -webkit-transition: .5s ease;
        -o-transition: .5s ease;
        transition: .5s ease;
    }

    .dark-toggle span {
        background: #fff;
    }

    #dark-mode {
        left: unset;
        right: 100px;
        top: 150px;
        display: block;
        z-index: 1000;
    }

    .navbar-menu.dark-mode {
        background: unset;
    }

    .white-comb.dark-mode {
        display: none;
    }

    .dark-comb.dark-mode {
        display: block;
        position: absolute;
        bottom: -2px;
        z-index: 5;
    }

    .side-nav.dark-mode {
        background: #000;
    }

}

